(env
 (dev
  (flags
   (:standard -w -6))))

(library
 (name zarith)
 (public_name zarith)
 (modules z q big_int_Z zarith_version)
 (wrapped false)
 (libraries
  zarith_stubs_js))

(rule
 (deps META)
 (action
  (with-stdout-to
   zarith_version.ml
   (progn
    (run echo "let")
    (bash "grep \"version\" META | head -1")))))

(library
 (name zarith_top)
 (optional)
 (public_name zarith.top)
 (modules zarith_top)
 (libraries zarith compiler-libs.toplevel))

(library (name zarith_stubs_js) (public_name zarith.stubs_js)
 (modules)
 (js_of_ocaml (javascript_files ./biginteger.js ./runtime.js)
  (flags --no-sourcemap))
 (libraries) (preprocess no_preprocessing))
